@@ -1,5 +1,9 @@
 2013-06-16  Jesse  <jesse.emond@hotmail.com>
 
+	* DrawableChampion.cs: 
+
+2013-06-16  Jesse  <jesse.emond@hotmail.com>
+
 	* Client.cs:
 	* DrawableChampion.cs: 
 
